--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 .home{
     height: 100vh;
-    background: url(images/20532917.jpg) center center no-repeat;
+    background: linear-gradient(rgba(68, 68, 68, 0.2),rgba(68, 68, 68, 0.2)), url(images/20532917.jpg) center center no-repeat;
     background-size: cover;
     display: flex;
     flex-direction: column;
@@ -120,7 +120,9 @@
 }
 .joke{
     height: 80vh;
-    background: url(images/embody_prd_adjustments_arms_2x_0c53cee1-6308-4973-9442-d516cc5c57e5_1920x.webp) center center no-repeat;
+    
+    background:  linear-gradient(rgba(118, 118, 118, 0.5),rgba(118, 118, 118, 0.5)), url(images/embody_prd_adjustments_arms_2x_0c53cee1-6308-4973-9442-d516cc5c57e5_1920x.webp) ;
+    background-position: center;
     background-size: cover;
     display: flex;
     flex-direction: column;
@@ -254,7 +256,7 @@
     width: 120px;
     height: 120px;
     border-radius: 50%;
-    border: 1px solid blue;
+    border: 1px solid rgb(60, 237, 199);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -263,7 +265,7 @@
     width: 100px;
     height: 100px;
     border-radius: 50%;
-    background-color: blue;
+    background-color: rgb(60, 237, 199);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -276,25 +278,31 @@
 ul.card-circle{
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
     list-style: none;
     
     width: 70px;
     height: 30px;
 }
 .card-circle li{
-    width: 30px;
-    height: 30px;
-    background-color: aqua;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: rgb(60, 237, 199);
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.card-circle :nth-child(2){
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;  
 }
 .block hr{
     width: 60px;
     height: 2px;
     border: none;
-    background-color: aqua;
+    background-color: rgb(60, 237, 199);
     
 }
 .block h2{
@@ -358,7 +366,7 @@ ul.card-circle{
     width: 60px;
     height: 2px;
     border: none;
-    background-color: aqua;
+    background-color: rgb(60, 237, 199);
     
 }
 .work p{
@@ -424,9 +432,16 @@ ul.card-circle{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 80px;
+    width: 55px;
     text-align: center;
     
+}
+.drop .contact-icons{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 80px;
+    text-align: center;  
 }
 .contact-icons i{
     background-color: darkcyan;
@@ -439,4 +454,51 @@ ul.card-circle{
     justify-content: center;
     
 }
+.design{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    
+
+}
+.design-left{
+    width: 50%;
+    background: url(images/image1.jpg) center no-repeat;
+    background-size: cover;
+
+}
+.design-right{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 20px 70px 30px 20px;
+    background-color:whitesmoke;
+}
+.design-right h1{
+    font-family: 'Raleway', sans-serif;
+    font-weight:  bold;
+    text-transform: uppercase;
+    font-size: 50px;
+    margin: 20px auto; 
+}
+.design-right hr{
+    width: 10%;
+    height: 10px;
+    border: none;
+    background-color: limegreen;
+    margin: 0 auto;  
+}
+.design-right p{
+    font-family: 'Kalam', cursive;
+    font-size: 25px;
+    color: rgb(64, 59, 59);
+    margin: 20px auto;
+    line-height: 40px;
+    margin-top: 90px;
+    padding-left: 30px;
+}
+    
 
